force-app/main/default/objects/Orders__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Date</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Departure_Date__c.Trip_Option__c</field>
            <operation>equals</operation>
            <valueField>$Source.Trip_Option__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Departure_Date__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orderss</relationshipName>
    <type>Lookup</type>
</CustomField>