force-app/main/default/objects/Orders__c/fields/HSS_Amount__c.field-meta.xml
<CustomField>
    <fullName>HSS_Amount__c</fullName>
    <label>HSS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>