force-app/main/default/objects/Orders__c/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <formula>Departure_Date__r.From_Date__c -60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>