force-app/main/default/objects/Orders__c/fields/PIF_count__c.field-meta.xml
<CustomField>
    <fullName>PIF_count__c</fullName>
    <label>PIF count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>