force-app/main/default/objects/Orders__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name Change Pending</fullName>
            </value>
            <value>
                <fullName>Replacement Passenger details pending</fullName>
            </value>
            <value>
                <fullName>Name Correction Pending</fullName>
            </value>
            <value>
                <fullName>Transport Change Request</fullName>
            </value>
            <value>
                <fullName>Cancellation Request</fullName>
            </value>
            <value>
                <fullName>Add-Ons - Additional</fullName>
            </value>
            <value>
                <fullName>Internal Correction/Change</fullName>
            </value>
            <value>
                <fullName>Accomodation Upgrade</fullName>
            </value>
            <value>
                <fullName>Tour Upgrade</fullName>
            </value>
            <value>
                <fullName>Meals Upgrade</fullName>
            </value>
            <value>
                <fullName>Duration/Extension (Option) - Upgrade</fullName>
            </value>
            <value>
                <fullName>Secured</fullName>
            </value>
            <value>
                <fullName>Initial Deposit - PIF/s Due</fullName>
            </value>
            <value>
                <fullName>Final Payment Pending</fullName>
            </value>
            <value>
                <fullName>Pending Logistics</fullName>
            </value>
            <value>
                <fullName>No Outstandings</fullName>
            </value>
            <value>
                <fullName>BC Sent (All changes via Logistics)&quot;</fullName>
            </value>
            <value>
                <fullName>Travel Pack Sent (Emergency Changes Only)&quot;</fullName>
            </value>
            <value>
                <fullName>Ready to Export</fullName>
            </value>
            <value>
                <fullName>Travelling</fullName>
            </value>
            <value>
                <fullName>Trip Completed</fullName>
            </value>
            <value>
                <fullName>Survey Sent</fullName>
            </value>
            <value>
                <fullName>Feedback Returned (Positive)</fullName>
            </value>
            <value>
                <fullName>Feedback Returned (Negative)</fullName>
            </value>
            <value>
                <fullName>Expired/Time out</fullName>
            </value>
            <value>
                <fullName>Min Number - Trip Changed</fullName>
            </value>
            <value>
                <fullName>Min Number - Credit issued</fullName>
            </value>
            <value>
                <fullName>Min Number - Refunded</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Pax No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>