force-app/main/default/objects/Orders__c/fields/Total_Coupon_Applied__c.field-meta.xml
<CustomField>
    <fullName>Total_Coupon_Applied__c</fullName>
    <label>Total Coupon Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>