force-app/main/default/objects/Orders__c/fields/Total_Order_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Discount__c</fullName>
    <label>Total Order Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>