force-app/main/default/objects/Orders__c/fields/Total_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Refund_Amount__c</fullName>
    <label>Total Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>