force-app/main/default/objects/Orders__c/fields/TP_Sent__c.field-meta.xml
<CustomField>
    <fullName>TP_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TP Sent</label>
    <type>Checkbox</type>
</CustomField>