force-app/main/default/objects/Orders__c/fields/Trip__c.field-meta.xml
<CustomField>
    <fullName>Trip__c</fullName>
    <label>Trip</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipName>Order</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>