force-app/main/default/objects/Orders__c/fields/Trip_Option__c.field-meta.xml
<CustomField>
    <fullName>Trip_Option__c</fullName>
    <label>Trip Option</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Trip_Option__c.Trip__c</field>
            <operation>equals</operation>
            <valueField>$Source.Trip__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Trip_Option__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>